# password-rs

./: .gitignore  README.md  check-features.sh  checksum-Elixir.Password.Native.exs  mix.exs
.github/workflows/: check-features.yml  release.yml
.github/workflows copy/: check.yml  release.yml
config/: config.exs
example-dockerfile/: Dockerfile-alpine  Dockerfile-default  Dockerfile-slim  check.sh
lib/: password.ex
lib/password/: native.ex
native/password_native/: Cargo.toml  README.md
native/password_native/.cargo/: config.toml
native/password_native/src/: algorithms.rs  bcrypt_copy.rs  lib.rs
native/password_native/src/algorithms/: argon2.rs  bcrypt.rs  pbkdf2.rs  scrypt.rs
priv/: README.eex
test/: password_test.exs
test/password/: property_test.exs
