[package]
name = "password_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "password_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
password-hash = {version = "0.5.0", features=["rand_core", "getrandom"]}
rustler = "0.27.0"
argon2 = { version = "0.5.0", optional = true, features = ["simple"] }
scrypt = { version = "0.11.0", optional = true }
pbkdf2 = { version = "0.12.1", features = ["simple", "sha1"], optional = true }
bcrypt = { version = "0.14.0", optional = true }
cfg-if = "1.0.0"
base64 = { version = "0.21.0", optional = true }

[features]
default = ["bcrypt", "argon2", "scrypt", "pbkdf2"]
bcrypt = ["dep:bcrypt", "base64"]
argon2 = ["dep:argon2"]
scrypt = ["dep:scrypt"]
pbkdf2 = ["dep:pbkdf2"]
